src/test/ui/parser/keyword-where-as-identifier.stderr
error: expected pattern, found keyword `where`
  --> $DIR/keyword-where-as-identifier.rs:4:9
   |
LL |     let where = "foo";
   |         ^^^^^ expected pattern

error: aborting due to previous error

